# rental-manager

./: .gitignore  BRAND_TESTING_PLAN.md  BUSINESS_RULES_DOCUMENTATION.md  CLAUDE.md  COMPANY_TESTING_PLAN.md  DEVELOPMENT_AUTHENTICATION_SETUP.md  DEVELOPMENT_MODE_DEFAULT.md  DEV_AUTH_BYPASS_IMPLEMENTATION.md  FRONTEND_AUTH_BYPASS_GUIDE.md  LOCATION_TEST_PLAN.md  PURCHASE_FIX_SUMMARY.md  PURCHASE_INVENTORY_INTEGRATION_REPORT.md  README.md  RENTAL_API_STATUS.md  RENTAL_IMPLEMENTATION_PLAN.md  RENTAL_SYSTEM_ANALYSIS_AND_ROADMAP.md  RENTAL_TEST_DOCUMENTATION.md  UOM_TESTING_DOCUMENTATION.md  docker-compose.prod.yml  docker-compose.yml  fastapi-project-prompt.md  package-lock.json  package.json  purchase_transaction_detail.json  run-brand-tests-complete.sh  run-uom-tests-docker.sh  test-api-direct.sh  test-auth-bypass.sh  test-brand-creation-simple.js  test-brand-creation-ui.js  test-category-api.sh  test-category-leaf-default.js  test-custom-tier-fix.js  test-flexible-pricing.js  test-inventory-api.sh  test-inventory-values.js  test-layout-verification.js  test-login-frontend.js  test-login-functionality.js  test-rental-rates.js  (+6 more)
management/: ADMIN_TESTING_SUMMARY.md  MIGRATION_TESTING_COMPREHENSIVE_REPORT.md  README.md  SETUP_COMPLETE.md  __init__.py  activate.sh  apply_migrations.py  check_alembic_version.py  check_database_tables.py  config.py  create_admin_simple.py  create_essential_tables.py  diagnose_admin_issues.py  final_verification.py  fix_async_sessions.py  fix_indentation.py  fix_main_indentation.py  fix_migrations.py  main.py  main_simple.py  pyproject.toml  setup.sh  test_admin_comprehensive.py  test_admin_creation.py  test_admin_creation_fixed.py  test_admin_manager_fix.py  test_complete_terminal.py  test_database_fix.py  test_db_inspector_fix.py  test_install.py  test_interactive_console.py  test_main_db_fix.py  test_main_migration_interface.py  test_main_startup.py  test_migration_comprehensive.py  test_migration_fix_interface.py  test_migration_focused.py  test_model_imports.py  test_models_loading.py  test_output_debug.py  (+5 more)
management/data/: __init__.py  brands.json  categories.json  companies.json  customers.json  items.json  locations.json  suppliers.json  units.json  users.json
management/modules/: __init__.py  admin_manager.py  backup_manager.py  database_inspector.py  migration_manager.py  migration_manager_enhanced.py  migration_templates.py  model_analyzer.py  seed_manager.py  table_cleaner.py
rental-manager-api/: .gitignore  CLAUDE.md  CONTACT_PERSONS_MIGRATION_DOCUMENTATION.md  DOCKER_TEST_EXECUTION_REPORT.md  Dockerfile  Dockerfile.locust  INVENTORY_IMPLEMENTATION_STATUS.md  INVENTORY_MODULE_IMPLEMENTATION.md  INVENTORY_REAL_DATABASE_TEST_REPORT.md  INVENTORY_TEST_COVERAGE_FINAL_REPORT.md  INVENTORY_TEST_EXECUTION_SUMMARY.md  ITEM_MODULE_MIGRATION_SUMMARY.md  LOCATION_MODULE_ANALYSIS.md  LOCATION_MODULE_IMPLEMENTATION.md  MIGRATION_RESET_DOCUMENTATION.md  Makefile  README.md  README_TESTING.md  RENTAL_PRICING_IMPLEMENTATION.md  TESTING_EXECUTION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_COVERAGE_SUMMARY_TRANSACTION.md  TRANSACTION_BUSINESS_RULES.md  TRANSACTION_IMPROVEMENTS.md  TRANSACTION_MODULE_ANALYSIS.md  TRANSACTION_MODULE_MIGRATION_STATUS.md  TRANSACTION_MODULE_MIGRATION_SUMMARY.md  alembic.ini  coverage_summary.md  docker-compose.100coverage.yml  docker-compose.inventory-test.yml  docker-compose.item-test.yml  docker-compose.location-test.yml  docker-compose.prod.yml  docker-compose.test-transactions.yml  docker-compose.test.yml  docker-compose.uom-test.yml  docker-compose.yml  manual_migration.sql  nginx-test.conf  (+36 more)
rental-manager-api/alembic/: env.py
rental-manager-api/app/: main.py
rental-manager-api/config/: whitelist.json
rental-manager-api/docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test
rental-manager-api/docs/: TRANSACTION_API_DOCUMENTATION.md  UNIT_OF_MEASUREMENT_MIGRATION.md  brand_testing_strategy.md
rental-manager-api/legacy/: BATCH_TRACKING_TEST_REPORT.md  BUSINESS_RULES_TEST_RESULTS.md  CLAUDE.md  Dockerfile  PRODUCTION_DATABASE_FIX_README.md  PRODUCTION_TEST_PLAN.md  RAILWAY_PRODUCTION_RESET.md  README.md  ROLLBACK_PLAN.md  alembic.ini  booking-final-test-report.json  database_backup_info_20250819_024942.json  docker-compose.yml  fix-cors-production.sh  manage.py  migration_contact_person.py  quick_railway_reset.sh  quick_seed_data.py  railway-reset.json  railway.json  requirements-dev.txt  requirements.txt  reset_railway.sh  security-test-report-simple.json  seed_basic_data.py  start-production.sh  test_booking_e2e.js  test_purchase_puppeteer.js
rental-manager-api/locust-tests/: item_locustfile.py
rental-manager-api/scripts/: Dockerfile.test  cleanup_test_brands.py  comprehensive_coverage_analysis.py  create_tables.py  create_tables_sync.py  docker-compose.company-tests.yml  generate_1000_items_test_data.py  generate_brand_mock_data.py  generate_contact_persons_test_data.py  generate_hierarchical_brand_data.py  generate_inventory_test_data.py  generate_simple_contact_test_data.py  init-test-db.sql  quick_integration_test.py  realistic_coverage_report.py  run-company-tests-complete.sh  run_comprehensive_item_tests.sh  run_location_tests.py  seed-brands-10k.py  seed-companies-10k.py  seed_locations.py  seed_uom_10k.py  test-brand-business-logic.py  test-brand-crud.sh  (+8 more)
(+1473 files in other folders)
