[project]
name = "rental-manager-management"
version = "1.0.0"
description = "Management tools for the Rental Manager system"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies (shared with main API)
    "sqlalchemy==2.0.39",
    "alembic==1.16.4", 
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "redis==6.4.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    
    # Management tool specific dependencies
    "rich==14.0.0",           # Beautiful terminal UI
    "typer==0.9.0",           # CLI framework
    "questionary==2.0.1",     # Interactive prompts
    "tabulate==0.9.0",        # Table formatting
    "tqdm==4.66.1",           # Progress bars
    
    # Utility dependencies
    "python-dotenv==1.1.1",   # Environment variable loading
    "pathlib>=1.0.0",         # Path handling (built-in but specified for clarity)
    "json5==0.9.14",          # Enhanced JSON parsing
    "click==8.1.7",           # CLI utilities (dependency of typer)
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0", 
    "pytest-cov==6.2.1",
    "ruff==0.12.9",
    "mypy==1.17.1",
    "ipython==9.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["management"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings  
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused-function-args
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
    "B904",   # raise ... from err
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-string-normalization = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project.scripts]
rental-mgmt = "management.main:app"

[project.urls]
Homepage = "https://github.com/rental-manager/management-tools"
Repository = "https://github.com/rental-manager/management-tools.git"
Issues = "https://github.com/rental-manager/management-tools/issues"