[project]
name = "rental-manager-api"
version = "1.0.0"
description = "FastAPI backend for rental property management system"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.39",
    "alembic==1.16.4",
    "psycopg2-binary==2.9.10",
    "redis==6.4.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "joserfc==1.0.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    "celery==5.5.3",
    "asyncpg==0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "ruff==0.12.9",
    "mypy==1.17.1",
    "ipython==9.4.0",
    "rich==14.0.0",
    "faker==37.5.3",
    "factory-boy==3.3.1",
    "pre-commit==4.0.1",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = ["E501", "B008"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers --asyncio-mode=auto"

[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = ["*/tests/*", "*/alembic/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"
title = "Rental Manager API - 100% Test Coverage Report"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]